cmake_minimum_required(VERSION 2.8)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX14)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support. Please use a different C++ compiler.")
endif()

include_directories("${PROJECT_SOURCE_DIR}/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
add_subdirectory(src)

file(GLOB QCHEADERS ${PROJECT_SOURCE_DIR}/include/qc/*.hpp)
file(GLOB QCMATRIXHEADERS ${PROJECT_SOURCE_DIR}/include/qc/matrix/*.hpp)
file(GLOB QCQGATEHEADERS ${PROJECT_SOURCE_DIR}/include/qc/qgate/*.hpp)
install(FILES ${QCHEADERS} DESTINATION include/qc)
install(FILES ${QCMATRIXHEADERS} DESTINATION include/qc/matrix)
install(FILES ${QCQGATEHEADERS} DESTINATION include/qc/qgate)
